{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 30,
  "lineage": "e1969bc4-3d57-d092-8307-622e3db7c831",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-aks-dev",
            "location": "uksouth",
            "name": "gpitfutre-aks-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-bastion-dev",
            "location": "uksouth",
            "name": "gpitfutre-bastion-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "gateway",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-gateway-dev",
            "location": "uksouth",
            "name": "gpitfutre-gateway-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "splunk",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-splunk-dev",
            "location": "uksouth",
            "name": "gpitfutre-splunk-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.2.0/24",
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-aks-dev",
            "name": "gpitfutre-aks-dev",
            "network_security_group_id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-aks-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.aks",
            "azurerm_resource_group.vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.0.0/24",
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev",
            "name": "gpitfutre-bastion-dev",
            "network_security_group_id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-bastion-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.bastion",
            "azurerm_resource_group.vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.1.0/24",
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-gateway-dev",
            "name": "gpitfutre-gateway-dev",
            "network_security_group_id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-gateway-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.gateway",
            "azurerm_resource_group.vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "splunk",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.3.0/24",
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-splunk-dev",
            "name": "gpitfutre-splunk-dev",
            "network_security_group_id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-splunk-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.splunk",
            "azurerm_resource_group.vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/20"
            ],
            "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev",
            "location": "uksouth",
            "name": "gpitfutre-vnet-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "subnet": [
              {
                "address_prefix": "10.100.0.0/24",
                "id": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev",
                "name": "gpitfutre-bastion-dev",
                "security_group": "/subscriptions/79b7e973-fbcc-4525-a33c-08bc4a9fc4d7/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-bastion-dev"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    }
  ]
}